--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,6 @@
-blib*
-Makefile
-Makefile.old
-Build
-Build.bat
-_build*
-pm_to_blib*
-*.tar.gz
 .lwpcookies
 cover_db
 pod2htm*.tmp
-Dancer-Session-Cookie-*
-.git*
-MANIFEST.bak
 t/logs
-MYMETA.yml
+/Dancer-Session-Cookie*
+/.build
