--- a/dist.ini
+++ b/dist.ini
@@ -9,3 +9,7 @@ copyright_holder = Alex Kapranoff
 :version = 0.036
 AutoMetaResources.bugtracker.rt = 0
 AutoMetaResources.bugtracker.github = user:dagolden
+stopwords = AES
+stopwords = cryptographically
+stopwords = honoured
+stopwords = https
