update Changes and meta for release

--- a/dist.ini
+++ b/dist.ini
@@ -10,6 +10,7 @@ copyright_holder = Alex Kapranoff
 AutoMetaResources.bugtracker.rt = 0
 AutoMetaResources.bugtracker.github = user:dagolden
 stopwords = AES
+stopwords = Kirsopp
 stopwords = cryptographically
 stopwords = honoured
 stopwords = https
