--- a/dist.ini
+++ b/dist.ini
@@ -2,15 +2,10 @@ name = Dancer-Session-Cookie
 author = Alex Kapranoff <kappa@cpan.org>
 author = Alex Sukria <sukria@cpan.org>
 author = David Golden <dagolden@cpan.org>
+author = Yanick Champoux <yanick@cpan.org>
 license = Perl_5
 copyright_holder = Alex Kapranoff
 
-[@DAGOLDEN]
-:version = 0.036
-AutoMetaResources.bugtracker.rt = 0
-AutoMetaResources.bugtracker.github = user:dagolden
-stopwords = AES
-stopwords = Kirsopp
-stopwords = cryptographically
-stopwords = honoured
-stopwords = https
+[@Filter]
+-bundle=@YANICK
+-remove=Covenant
