remove README.pod

--- a/dist.ini
+++ b/dist.ini
@@ -9,4 +9,5 @@ copyright_holder = Alex Kapranoff
 [@Filter]
 -bundle=@YANICK
 -remove=Covenant
+-remove=ReadmeFromPod
 NextVersion::Semantic.format=%d.%02d
