fine-tune for dzil

--- a/dist.ini
+++ b/dist.ini
@@ -11,3 +11,6 @@ copyright_holder = Alex Kapranoff
 -remove=Covenant
 -remove=ReadmeFromPod
 NextVersion::Semantic.format=%d.%02d
+
+[Prereqs / TestRequires]
+Plack::Test = 1.0029
