--- a/dist.ini
+++ b/dist.ini
@@ -13,4 +13,6 @@ copyright_holder = Alex Kapranoff
 NextVersion::Semantic.format=%d.%02d
 
 [Prereqs / TestRequires]
-Plack::Test = 1.0029
+Plack::Test           = 1.0029
+HTTP::Cookies         = 0
+HTTP::Request::Common = 0
