--- a/dist.ini
+++ b/dist.ini
@@ -13,6 +13,6 @@ copyright_holder = Alex Kapranoff
 NextVersion::Semantic.format=%d.%02d
 
 [Prereqs / TestRequires]
-Plack::Test           = 1.0029
+Plack                 = 1.0029
 HTTP::Cookies         = 0
 HTTP::Request::Common = 0
