Add Travis and AppVeyor badges to README

--- a/dist.ini
+++ b/dist.ini
@@ -12,6 +12,10 @@ copyright_holder = Alex Kapranoff
 -remove=ReadmeFromPod
 NextVersion::Semantic.format=%d.%02d
 
+[GitHubREADME::Badge]
+badges = travis
+badges = appveyor
+
 [Prereqs / TestRequires]
 Plack                 = 1.0029
 HTTP::Cookies         = 0
