Build results of 072d32f (on badges)

--- a/dist.ini
+++ b/dist.ini
@@ -13,6 +13,7 @@ copyright_holder = Alex Kapranoff
 NextVersion::Semantic.format=%d.%02d
 
 [GitHubREADME::Badge]
+phase = filemunge
 badges = travis
 badges = appveyor
 
