--- a/dist.ini
+++ b/dist.ini
@@ -6,14 +6,14 @@ author = Yanick Champoux <yanick@cpan.org>
 license = Perl_5
 copyright_holder = Alex Kapranoff
 
-[@Filter]
+[@ConfigSlicer]
 -bundle=@YANICK
 -remove=Covenant
 -remove=ReadmeFromPod
 NextVersion::Semantic.format=%d.%02d
 
 [GitHubREADME::Badge]
-phase = filemunge
+phase  = filemunge
 badges = travis
 badges = appveyor
 
